# MP_Volume

./: .gitignore  BUILD_INSTRUCTIONS.md  CONTRIBUTING.md  DOCUMENTATION_SUMMARY.md  INSTALLATION.md  MP_Volume.spec  MP_Volume_Simulator.spec  PROJECT_ORGANIZATION.md  QUICKSTART.md  README.md  README_EQUATION_FEATURE.md  RELEASE_CHECKLIST.md  analyze_config.py  app.py  app.spec  build.bat  build_cpp_backend.py  build_cpp_fixed.py  build_exe.bat  build_exe.ps1  build_exe.sh  build_executable.py  check_simulations.py  compare_calculations.py  compare_configs.py  compare_legacy_current_scenarios.py  compare_python_cpp.py  compare_simulation_results.py  cpp_comparison_results.md  cpp_debug_output.txt  cpp_implementation_fixes.md  create_test_simulation.py  mp_volume.spec  mp_volume_simulator.spec  python_simulation_test.py  requirements.txt  single_iter_comparison.py  test_configurable.py  test_cpp_backend.py  test_delete_ion.py  (+6 more)
archive/: README.md  build_exe_simple.ps1  compare_legacy_vs_current.py  mp_volume_simulator.spec  test_nestConfig.ipynb
backups/: analyze_config.py  analyze_cpp_debug.py  analyze_cpp_output.py  check_cpp_calculation.py  check_cpp_ion_completeness.py  check_ions.py  (+8 more)
cpp_backend/: CMakeLists.txt  CMakeLists.txt.bak  README.md
cpp_backend/include/: Exterior.h  FluxCalculationParameters.h  HistoriesStorage.h  IonChannel.h  IonSpecies.h  Simulation.h  Vesicle.h
cpp_backend/src/: Exterior.cpp  FluxCalculationParameters.cpp  HistoriesStorage.cpp  IonChannel.cpp  IonSpecies.cpp  Simulation.cpp  Vesicle.cpp  extract_cpp_values_for_iteration.py  main.cpp
(+299 files in other folders)
